# havro

./: .gitignore  README.md  fix-hls.nix  flake.nix  havro.cabal  stack.yaml
materializations/haskell-language-server/: default.nix
materializations/havro/: default.nix
materializations/havro/.plan.nix/: havro.nix
materializations/hoogle/: default.nix
src/: VinylTypeLits.hs  ZigZagCoding.hs
src/Avro/: Encoder.hs  Inspector.hs  Parser.hs  Records.hs  Schema.hs
src/Avro/Schema/: JSON.hs
src/Data/Functor/: PolyVariant.hs  Polyvariant.hs
src/Data/Functor/Polyvariant/: Polyvariadic.hs
test/: test.hs
