cabal-version: 3.4

name: havro
version: 0.0.0.0
synopsis: Haskell implementation of Apache Avro
-- description:
license: LGPL-3.0-or-later
license-file: LICENSE
author: Benjamin Mellor
maintainer: ben@smokingkangaroo.com
-- copyright:
category: Data
build-type: Simple
-- extra-source-files:

library
  exposed-modules: Avro.Encoder
                 , Avro.Inspector
                 , Avro.Parser
                 , Avro.Records
                 , Avro.Schema
                 , Data.Functor.Polyvariant
                 , Data.Functor.Polyvariant.Polyvariadic
                 , VinylTypeLits
                 , ZigZagCoding
  -- other-modules:
  -- other-extensions:
  build-depends: base ^>= 4.14
               , attoparsec ^>= { 0.13, 0.14 }
               , binary ^>= { 0.8, 0.9, 0.10 }
               , bytestring ^>= { 0.10, 0.11 }
               , containers ^>= 0.6
               , contravariant ^>= 1.5
-- TODO: data-binary-ieee754 has been deprecated in favour of binary
               , data-binary-ieee754 == 0.4.*
               , lens ^>= 5
               , vinyl ^>= 0.13
               , text ^>= 1.2

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
               -Wmissing-exported-signatures
               -Wmissing-import-lists
               -Werror
               -O

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends: base
               , attoparsec
               , bytestring
               , containers
               , contravariant

               , havro

               , logict ^>= { 0.6, 0.7 }
               , smallcheck ^>= { 1.1, 1.2 }
               , tasty ^>= { 1.1, 1.2, 1.3, 1.4 }
               , tasty-smallcheck == 0.8.*
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall
               -Wmissing-exported-signatures
               -Wmissing-import-lists
               -Werror
               -O
